--- a/render.yaml
+++ b/render.yaml
@@ -1,23 +1,64 @@
 services:
+  # --- Web Service ---
   - type: web
     name: chat-application
     env: python
+    plan: free
     buildCommand: |
       pip install -r requirements.txt
-      python manage.py migrate
       python manage.py collectstatic --noinput
-    startCommand: gunicorn chat_project.wsgi:application --bind 0.0.0.0:$PORT
+    startCommand: gunicorn chat_project.wsgi:application
     envVars:
       - key: DATABASE_URL
-        fromDatabase:
-          name: mychat-db
-          property: connectionString
+        value: mysql://root:BGQZFZMLxehILrQBcPtylqogypMetsAW@yamanote.proxy.rlwy.net:36753/railway
+      - key: REDIS_URL
+        value: redis://127.0.0.1:6380
       - key: SECRET_KEY
         sync: false
       - key: DEBUG
-        value: false
+        value: False
+      - key: DJANGO_SETTINGS_MODULE
+        value: chat_project.settings
 
-databases:
-  - name: mychat-db
-    databaseName: railway
-    user: root
+  # --- Migration Job (run manually when models change) ---
+  - type: job
+    name: migrate-db
+    env: python
+    plan: free
+    buildCommand: |
+      pip install -r requirements.txt
+    startCommand: python manage.py migrate
+    envVars:
+      - key: DATABASE_URL
+        value: mysql://root:BGQZFZMLxehILrQBcPtylqogypMetsAW@yamanote.proxy.rlwy.net:36753/railway
+      - key: REDIS_URL
+        value: redis://127.0.0.1:6380
+      - key: SECRET_KEY
+        sync: false
+      - key: DJANGO_SETTINGS_MODULE
+        value: chat_project.settings
+
+  # --- Superuser Job (run once to create admin user) ---
+  - type: job
+    name: create-superuser
+    env: python
+    plan: free
+    buildCommand: |
+      pip install -r requirements.txt
+    startCommand: >
+      python manage.py createsuperuser --noinput
+    envVars:
+      - key: DATABASE_URL
+        value: mysql://root:BGQZFZMLxehILrQBcPtylqogypMetsAW@yamanote.proxy.rlwy.net:36753/railway
+      - key: REDIS_URL
+        value: redis://127.0.0.1:6380
+      - key: SECRET_KEY
+        sync: false
+      - key: DJANGO_SETTINGS_MODULE
+        value: chat_project.settings
+      - key: DJANGO_SUPERUSER_USERNAME
+        value: admin
+      - key: DJANGO_SUPERUSER_EMAIL
+        value: you@example.com
+      - key: DJANGO_SUPERUSER_PASSWORD
+        sync: false
