--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,48 @@
-Django>=5.0,<6.0
-channels>=4.0,<5.0
-uvicorn>=0.30.0
-channels-redis>=4.1,<5.0
-mysqlclient>=2.2.0
-Pillow>=10.0
-python-decouple>=3.8
-requests>=2.31
-whitenoise>=6.6.0
-dj-database-url>=2.1.0
-
+anyio==4.9.0
+asgiref==3.9.1
+attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
+certifi==2025.8.3
+cffi==1.17.1
+channels==4.3.0
+channels_redis==4.3.0
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+constantly==23.10.4
+cryptography==45.0.5
+daphne==4.2.1
+dj-database-url==3.0.1
+Django==5.2.4
+h11==0.16.0
+httptools==0.6.4
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+msgpack==1.1.1
+mysqlclient==2.2.7
+pillow==11.3.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pyOpenSSL==25.1.0
+python-decouple==3.8
+python-dotenv==1.1.1
+PyYAML==6.0.2
+redis==6.2.0
+requests==2.32.4
+service-identity==24.2.0
+setuptools==80.9.0
+sniffio==1.3.1
+sqlparse==0.5.3
+Twisted==25.5.0
+txaio==25.6.1
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.35.0
+watchfiles==1.1.0
+websockets==15.0.1
+whitenoise==6.9.0
+zope.interface==7.2
