--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn chat_project.asgi:application --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn chat_config.asgi:application --host 0.0.0.0 --port $PORT
     envVars:
       - key: DEBUG
         value: "False"
